# protov_app

./: .env.development  .env.webserial  .gitignore  CNAME  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: e2e.yml  pages.yml
e2e/: README.md  global-setup.ts
e2e/fixtures/: lab-devices.ts  mock-device.ts  release.json  test-base.ts
e2e/pages/: app.page.ts  controls.page.ts  docs.page.ts  firmware-update.page.ts  graphs.page.ts  lab.page.ts  telemetry.page.ts
e2e/states/: cc-mode.json  ch1-active.json  default.json  display-settings.json  dual-output.json  fwup-eligible.json  fwup-incompatible-hw.json  fwup-unsupported-fw.json  fwup-up-to-date.json  ocp-fault.json  ovp-fault.json  protection-tripped.json  setpoints-updated.json  temp-fault.json
e2e/support/: constants.ts  fwup-connect.ts  fwup-release.ts  graph-settings.ts  hardware-setpoints.ts  theme.ts  (+3 more)
mock/: README.md
mock-device/: .gitignore  README.md  pyproject.toml  requirements.txt
mock-device/protov_scpi/: __init__.py  __main__.py  bridge.py  colors.py  control.py  device.py  device_pool.py  models.py  protection.py  server.py  simulation.py  state_loader.py  telemetry.py
mock-device/scripts/: control.py  create_port.sh  run.sh
mock-device/states/: ch1-active.yaml  default.yaml  dual-output.json  protection-tripped.yaml
mock-device/tests/: conftest.py  test_bridge.py  test_device.py  test_device_pool.py  test_pyvisa.py
public/: CNAME
scripts/: bundle-firmware.mjs
src/: App.tsx  index.css  main.tsx  mdx.d.ts  vite-env.d.ts
(+186 files in other folders)
