[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "protov-scpi-mock"
version = "0.1.0"
description = "ProtoV MINI mock power supply (SCPI over serial)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyserial>=3.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pyvisa>=1.14",
  "pyvisa-py>=0.7",
]

[project.scripts]
protov-mock = "protov_scpi.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["protov_scpi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
